# PandasPlusPlus

./: .clang-format  .gitattributes  .gitignore  CCSVInterface.cpp  CCSVInterface.h  CMakeLists.txt  CMakePresets.json  Dataframe.h  Exceptions.h  LICENSE  README.md  ReadCSV.cpp  ReadCSV.h
.github/workflows/: cmake-multi-platform.yml
c-exports/: CCSVInterface.cpp  CCSVInterface.h  CMakeLists.txt
c-exports/src/: CInterface.cpp  ppp_column.cpp  ppp_matrix.cpp
c-exports/src/include/: CInterface.h  common_defs.h  ppp_column.h  ppp_matrix.h
dotnet/: CMakeLists.txt
dotnet/src/: FMatrix.cpp
dotnet/src/include/: FMatrix.h
ppp/: CCSVInterface.cpp  CCSVInterface.h  CCSVInterface.hpp  CMakeLists.txt  Dataframe.hpp
ppp/ppp/: Column.hpp  CsvFile.hpp  DSP.hpp  Dataframe.hpp  Exceptions.hpp  Matrix.hpp
python-module/: CMakeLists.txt
python-module/src/: pppmodule.c  pppmodule.cpp
test/: CMakeLists.txt  main.cpp
test/c/: CMakeLists.txt
test/c/src/: column_test.c  main.c
test/c/src/include/: column_test.h  common_defs.h
test/cpp/: CMakeLists.txt
test/cpp/src/: column_tests.cpp  matrix_tests.cpp
test/cpp/src/include/: column_tests.hpp  matrix_tests.hpp
test/csharp/: PandasPlusPlusTest.sln
test/python/: CMakeLists.txt  test.py
test/src/: benchmark.cpp  column_tests.cpp  main.cpp  matrix_tests.cpp
test/src/include/: benchmark.hpp  column_tests.hpp  matrix_tests.hpp
